--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -30,6 +30,18 @@ form input {
   border: 1px solid #dcdce6;
 }
 
+form textarea {
+  width: 100%;
+  height: 60px;
+  color: #333;
+  margin-top: 8px;
+  line-height: 24px;
+  min-height: 140px;
+  border-radius: 8px;
+  padding: 16px 24px;
+  border: 1px solid #dcdce6;
+}
+
 .button {
   border: 0;
   width: 100%;
